--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.2",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "@types/lodash.debounce": "^4.0.7",
+    "ahooks": "^3.7.7",
     "axios": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.11.2",
