code splitting,added react lazy,suspense in App

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "@types/react-loadable": "^5.5.7",
     "ahooks": "^3.7.7",
     "axios": "^1.4.0",
     "lodash.debounce": "^4.0.8",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-loadable": "^5.5.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
